# Camera3d

./: LICENSE  README.md  pyproject.toml
camera3d/: cpp_backend.py
camera3d/camera/: __init__.py  base_camera.py  colmap_camera.py  cylinder_camera.py  fov_camera.py  opencv_camera.py  opencv_fisheye_camera.py  panoramic_camera.py  pinhole_camera.py  posed_camera.py  simple_radial_camera.py
camera3d/cpp/: Camera.h  CameraDistortion.cu  binding.cpp  cuda.cuh  types.h
camera3d/examples/: test_cameras.py
camera3d/geometry/: depth_map.py  ray.py  transform.py
camera3d/utils/: file.py  package.py
examples/: read_colmap_cameras.py  test_cameras.py  test_pinhole.py
